mod lang index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="afrikans">
+<html lang="fr">
   <head>
     <title>JAJSJASJAJSA</title>
     <!-- Required meta tags -->
